# harness-study

./: .gitignore  README.md  pyproject.toml
data/memories/: MEMORY.md  USER.md
data/skills/cli_help/: SKILL.md
data/skills/echo/: SKILL.md
data/skills/notes/: SKILL.md
docs/: agent-harness-langgraph-guide.md  harness_study_curriculum_v2.md
scripts/: e2e-week1.txt  e2e-week2.txt  e2e-week3.txt  e2e-week4.txt
src/harness/: __init__.py  cli.py  config.py  graph.py  metrics.py  state.py  tools.py
src/harness/nodes/: agent.py  bootstrap.py  compactor.py  gateway.py  human_gate.py  self_improve.py  skill_loader.py  subagent.py  tool_dispatch.py
tests/: conftest.py  test_agent.py  test_bootstrap.py  test_cli.py  test_compactor.py  test_config.py  test_e2e_extra.py  test_e2e_week1.py  test_e2e_week2.py  test_e2e_week3.py  test_e2e_week4.py  test_gateway.py  test_graph.py  test_human_gate.py  test_metrics.py  test_self_improve.py  test_skill_loader.py  test_state.py  test_subagent.py  test_tool_dispatch.py  test_tools.py
